# narrative

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs-build.yml
api/idg-engine/: index.html
api/llm-bridge/: index.html
api/trajectory-explorer/: index.html
changelog/: index.html
contributing/: index.html
docs/: contributing.md  gen_ref_pages.py  index.md  mkdocs_plugins.py
docs/examples/: advanced-usage.md  custom-domains.md  little-red.md
docs/guides/: concepts.md  documentation.md  installation.md  quick-start.md
examples/: little_red.py
examples/advanced-usage/: index.html
examples/custom-domains/: index.html
examples/little-red/: index.html
guides/concepts/: index.html
guides/documentation/: index.html
guides/installation/: index.html
guides/quick-start/: index.html
narrative/: __init__.py
narrative/core/: __init__.py  idg_builder.py  trajectory_explorer.py
narrative/llm/: __init__.py  llm_renderer.py
narrative/schemas/: __init__.py  domain.py
search/: search_index.json
tests/: __init__.py  test_idg_builder.py  test_llm_renderer.py  test_trajectory_explorer.py
